adapting for illumidesk autograding transfer

--- a/index.ipynb
+++ b/index.ipynb
@@ -27,7 +27,7 @@
     " - take a name as an argument\n",
     " - print \"Greetings! I am `name` and I am pleased to make your acquaintance!\"\n",
     "\n",
-    "Then in the next cell, assign your actual name (i.e. \"Sir Patrick Stewart\" or \"Lupita Nyong'o\") to the variable `name`.\n",
+    "Then in the next cell, assign the name \"Gene Hackman\" to the variable `name`.\n",
     "\n",
     "Run all cells to confirm the result."
    ]
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Modify the code in this cell to fulfill the requirements of Question 1\n",
+    "# Modify the code in this cell to use in your answer\n",
     "def greet_user():\n",
     "    \"\"\"\n",
     "    this function takes a string name as an argument \n",
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Modify the code in this cell to fulfill the requirements of Question 1\n",
+    "# Modify the code in this cell to use in your answer \n",
     "# (Replace None with appropriate code)\n",
     "name = None"
    ]
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "# __SOLUTION__\n",
-    "name = \"Sir Patrick Stewart\""
+    "name = \"Gene Hackman\""
    ]
   },
   {
@@ -138,9 +138,9 @@
    "outputs": [],
    "source": [
     "# __SOLUTION__\n",
-    "# The purpose of assessments are to assess a student's comprehension and application of our Data Science program's key content.\n",
-    "# Daily checkpoints are formative, in-depth assessments\n",
-    "# Code challenges are summative, end-to-end assessments"
+    "\"\"\"The purpose of assessments are to assess a student's comprehension and application of our Data Science program's key content.\n",
+    "Daily checkpoints are formative, in-depth assessments\n",
+    "Code challenges are summative, end-to-end assessments\"\"\""
    ]
   }
  ],
@@ -160,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
