updating for illumidesk transfer

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,39 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# __SOLUTION__\n",
-    "def greet_user(name):\n",
-    "    \"\"\"\n",
-    "    this function takes a string name as an argument \n",
-    "    and prints a greeting including that name \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    print(f\"Greetings! I am {name} and I am pleased to make your acquaintance!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Modify the code in this cell to use in your answer \n",
     "# (Replace None with appropriate code)\n",
+    "\n",
     "name = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# __SOLUTION__\n",
-    "name = \"Gene Hackman\""
    ]
   },
   {
@@ -97,19 +72,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Greetings! I am Sir Patrick Stewart and I am pleased to make your acquaintance!\n"
+      "Greetings! I am Gene Hackman and I am pleased to make your acquaintance!\n"
      ]
     }
    ],
    "source": [
     "# __SOLUTION__\n",
+    "\n",
+    "def greet_user(name):\n",
+    "    \"\"\"\n",
+    "    this function takes a string name as an argument \n",
+    "    and prints a greeting including that name \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    print(f\"Greetings! I am {name} and I am pleased to make your acquaintance!\")\n",
+    "\n",
+    "name = \"Gene Hackman\"\n",
+    "\n",
     "greet_user(name)"
    ]
   },
