updating for illumidesk

--- a/index.ipynb
+++ b/index.ipynb
@@ -20,6 +20,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Imports\n",
+    "\n",
+    "You will usually have to import different packages into a checkpoint or other material we give you\n",
+    "\n",
+    "Don't worry if you don't have all the mechanics about what that means at this point\n",
+    "\n",
+    "Just run the cell below, which allows the test code to function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from test_scripts.test_class import Test\n",
+    "test = Test()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Question 1\n",
     "\n",
     "Adapt the `greet_user` function to do the following:\n",
@@ -72,17 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Greetings! I am Gene Hackman and I am pleased to make your acquaintance!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__\n",
     "\n",
