--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Run this cell to import tests\n",
+    "#Run this cell without changes to import tests\n",
     "from test_scripts.test_class import Test\n",
     "test = Test()"
    ]
