--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -110,7 +110,7 @@
     "# Modify the code in this cell to use in your answer\n",
     "#(Replace None with appropriate code)\n",
     "\n",
-    "def greet_user():\n",
+    "def greet_user(name):\n",
     "    \"\"\"\n",
     "    this function takes a string name as an argument \n",
     "    and prints a greeting including that name \n",
@@ -118,12 +118,14 @@
     "    \n",
     "    statement = 'Greetings! I am Gene Hackman and I am pleased to make your acquaintance!'\n",
     "    \n",
-    "    print(statement)\n"
+    "    print(statement)\n",
+    "    \n",
+    "    return statement\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -155,15 +157,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Greetings! I am Gene Hackman and I am pleased to make your acquaintance!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this cell without changes to check your answer\n",
     "greet_user(name)"
@@ -171,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -203,6 +197,8 @@
     "    \"\"\"\n",
     "    statement = f\"Greetings! I am {name} and I am pleased to make your acquaintance!\"\n",
     "    print(statement)\n",
+    "    \n",
+    "    return statement\n",
     "\n",
     "name = \"Gene Hackman\"\n",
     "\n",
@@ -219,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -231,19 +227,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "greet_user() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-b03937c7261e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_test\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgreet_user\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'gene_hackman'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Ben'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: greet_user() takes 0 positional arguments but 1 was given"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### BEGIN HIDDEN TESTS\n",
     "\n",
