modifying static code prompts

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,9 @@
    "source": [
     "## Question 1\n",
     "\n",
-    "Adapt the `greet_user` function to do the following:\n",
+    "Copy and paste the given `greet_user` code into a cell below.\n",
+    "\n",
+    "Adapt the function to do the following:\n",
     "\n",
     " - take a name as an argument\n",
     " - print \"Greetings! I am `name` and I am pleased to make your acquaintance!\"\n",
@@ -107,8 +109,9 @@
    },
    "outputs": [],
    "source": [
+    "# Copy / paste this starter code into a cell below\n",
     "# Modify the code in this cell to use in your answer\n",
-    "#(Replace None with appropriate code)\n",
+    "# (Replace None with appropriate code)\n",
     "\n",
     "def greet_user(name):\n",
     "    \"\"\"\n",
@@ -116,7 +119,7 @@
     "    and prints a greeting including that name \n",
     "    \"\"\"\n",
     "    \n",
-    "    statement = 'Greetings! I am Gene Hackman and I am pleased to make your acquaintance!'\n",
+    "    statement = None\n",
     "    \n",
     "    print(statement)\n",
     "    \n",
@@ -138,10 +141,11 @@
    },
    "outputs": [],
    "source": [
+    "# Copy / paste this code into a cell below\n",
     "# Modify the code in this cell to use in your answer \n",
     "# (Replace None with appropriate code)\n",
     "\n",
-    "name = 'Gene Hackman'"
+    "name = None"
    ]
   },
   {
