--- a/index.ipynb
+++ b/index.ipynb
@@ -48,26 +48,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "bbbc9017a553b27794c213601fba957a",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Run this cell without changes to import tests\n",
-    "from test_scripts.test_class import Test\n",
-    "test = Test()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "nbgrader": {
@@ -123,47 +103,10 @@
     "    \n",
     "    print(statement)\n",
     "    \n",
-    "    return statement\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "6cece22837cca9929a7eb3b13c7a2788",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Copy / paste this code into a cell below\n",
-    "# Modify the code in this cell to use in your answer \n",
-    "# (Replace None with appropriate code)\n",
+    "    return statement\n",
     "\n",
-    "name = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "159e1b9b20e3a63ab71ba7b9c491744e",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Run this cell without changes to check your answer\n",
+    "name = None\n",
+    "\n",
     "greet_user(name)"
    ]
   },
@@ -184,6 +127,9 @@
    "source": [
     "### BEGIN SOLUTION\n",
     "\n",
+    "\n",
+    "from test_scripts.test_class import Test\n",
+    "test = Test()\n",
     "\n",
     "def greet_user(name):\n",
     "    \"\"\"\n",
@@ -226,13 +172,21 @@
    "source": [
     "### BEGIN HIDDEN TESTS\n",
     "\n",
-    "\n",
-    "test.run_test(greet_user(name), 'gene_hackman')    \n",
+    "try:\n",
+    "test.run_test(greet_user(name), 'gene_hackman')   \n",
+    "except error:\n",
+    "    raise AttributeError (\"Looks like your function didn't work properly?\")\n",
     "\n",
     "name = 'Ben'\n",
+    "try:\n",
     "test.run_test(greet_user(name), 'hard_coding')\n",
-    "\n",
-    "test.run_test(greet_user.__code__.co_varnames, 'attributes')\n",
+    "except error:\n",
+    "    raise AttributeError (\"Looks like you hard-coded the info instead of making it dynamic?\")\n",
+    "    \n",
+    "try:\n",
+    "    test.run_test(greet_user.__code__.co_varnames, 'attributes')\n",
+    "except error:\n",
+    "    raise AttributeError (\"Looks like you altered the function?\")\n",
     "\n",
     "\n",
     "### END HIDDEN TESTS"
